# easyStory

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  chat-redesign.html  memory.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test渠道.md  tools.md  对话历史
apps/api/: .env.example  provider-interop.example.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3f2a6b9d1c44_add_assistant_rule_profiles.py  5a1c9e8d4b72_add_credential_token_limits.py  6df7d5dfd8d7_baseline.py  97c3e2dcb2f1_add_credential_connection_overrides.py  a7b8c9d0e1f2_add_credential_transport_tool_verification.py  b8d9f7c1a2e3_add_assistant_user_preferences.py  c4d7e8f9a1b2_add_credential_client_identity.py  d9e4f1b2c3a4_add_credential_user_agent_override.py  e1b2c3d4f5a6_add_credential_interop_profile.py  f2a4c6d8e0b1_add_credential_verified_probe_kind.py
apps/api/app/: main.py
apps/api/app/core/: config_loader.py
apps/api/app/engine/: __init__.py  context_builder.py  plugin_registry.py  review_executor.py  tool_provider.py  workflow_engine.py
apps/api/app/entry/: __init__.py
apps/api/app/hooks/: __init__.py  builtin.py
apps/api/app/infrastructure/: config_loader.py  skill_input_validator.py
apps/api/app/models/: __init__.py  artifact.py  chapter_task.py  content.py  credential.py  execution_log.py  export.py  project.py  review.py  story_fact.py  token_usage.py  user.py  workflow.py
apps/api/app/modules/: __init__.py  model_registry.py
apps/api/app/schemas/: config_schemas.py  hook_action_config.py
apps/api/app/service/: workflow_service.py
apps/api/app/shared/: __init__.py  settings.py
apps/api/scripts/: project_trash_cleanup.py  provider_interop_check.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: api_test_support.py  assistant_service_test_support.py  async_api_support.py  async_service_support.py  context_builder_test_support.py  project_deletion_seed_support.py  test_alembic_baseline.py  test_analysis_api.py  test_analysis_delete_api.py  test_analysis_delete_service.py  test_analysis_latest_api.py  (+169 more)
(+1281 files in other folders)
