[project]
name = "easystory-api"
version = "0.1.0"
description = "easyStory AI Novel Creation Platform - Backend API"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2,<3",
    "aiosqlite>=0.21,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1,<2",
    "pyyaml>=6,<7",
    "jinja2>=3.1,<4",
    "httpx>=0.28",
    "langgraph>=1.1,<1.2",
    "mcp>=1,<2",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "alembic>=1.14,<2",
    "litellm>=1.83,<1.84",
    "asyncpg>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 100
